--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -42,6 +42,6 @@ ip:
 spring:
   config.activate.on-profile: heroku
   datasource:
-    url: ${JAWSDB_URL}
+    url: ${JAWSDB_MARIA_URL}
   jpa.hibernate.ddl-auto: create
   sql.init.mode: always
