--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,6 +1,7 @@
 spring:
   datasource:
-    url: jdbc:mariadb://3.38.33.154:3306/jpastander
+#    url: jdbc:mariadb://3.38.33.154:3306/jpastander
+    url: jdbc:mariadb://localhost:3306/jpastander
     username: woojin
     password: 1234
     driver-class-name: org.mariadb.jdbc.Driver
@@ -11,10 +12,10 @@ spring:
     cache: false
   thymeleaf:
     cache: false
-  boot:
-    admin:
-      mail:
-        from: ${spring.mail.username}
+#  boot:
+#    admin:
+#      mail:
+#        from: ${spring.mail.username}
   mail:
     host: smtp.naver.com
     port: 465
