--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,7 +1,7 @@
 spring:
   datasource:
 #    url: jdbc:mariadb://3.38.33.154:3306/jpastander
-    url: jdbc:mariadb://localhost:3306/jpastander
+    url: jdbc:mariadb://localhost:3307/stander
     username: woojin
     password: 1234
     driver-class-name: org.mariadb.jdbc.Driver
