build.gradle 수정
create -> update로 수정했다.

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -44,5 +44,5 @@ spring:
   config.activate.on-profile: heroku
   datasource:
     url: ${JAWSDB_MARIA_URL}
-  jpa.hibernate.ddl-auto: create
+  jpa.hibernate.ddl-auto: update
   sql.init.mode: always
